tests/src/frontend/typechecking/invalid/pattern_match_base_2.sk
base class Foo

fun matcher(x: Foo): void {
  x match {
  | Foo() -> void
  }
}
